# Cross_Platform_TCP-IP_Communication

./: .gitignore  README.md
clion/: CMakeLists.txt  Socket-server.cpp  main.cpp
clion-client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  ServerConnection.cpp  ServerConnection.h  ServerManager.cpp  main.cpp
clion-server/: CMakeLists.txt  Input.h  ServerManager.h  Socket-server.cpp  main.cpp
core-ClientAndroid/: AndroidViewer.sln
core-ClientAndroid/AndroidViewer/: AndroidManifest.xml  AndroidViewer.vcxproj  AndroidViewer.vcxproj.filters
core-ClientAndroid/Android_Connect_Server_Test/: AndroidManifest.xml  Android_Connect_Server_Test.vcxproj  Android_Connect_Server_Test.vcxproj.filters
core-ClientAndroid/ConnectionBaseAndroid/: ConnectionBaseAndroid.vcxproj
core-ClientAndroid/helloworld/: AndroidManifest.xml  helloworld.vcxproj  helloworld.vcxproj.filters
core-ClientPC-send-image/: core-ClientPC.sln
core-ClientPC-send-image/core-ClientPC/: ClientApp.cpp  ClientApp.h  ServerConnection.h  core-ClientPC.vcxproj  core-ClientPC.vcxproj.filters  main.cpp
core-ClientPC/core-ClientPC/: ClientApp.cpp  ClientApp.h  Input.h  ServerConnection.h  core-ClientPC.aps  (+1 more)
core-ClientUnity/: SocketConnectionZhl.sln  core-ClientUnity.sln  coreClientuUity.sln
core-ClientUnity - Copy/: Assembly-CSharp.csproj  core-ClientUnity.CSharp.csproj  core-ClientuUity.sln
core-ServerPC/: core-ServerPC.sln
include2/: Input.h  ModelingData.h  ModelingManager.h  ServerConnection-Android.h  ServerConnection.h  ServerManager.h  ToolBase.h
pthreads-2.9.1/: pthread.sln
(+187 files in other folders)
